[gd_scene load_steps=14 format=3 uid="uid://ca0ysw5vmydwd"]

[ext_resource type="Script" uid="uid://b8cv1wh2endew" path="res://scenes/enemies/basic_enemy.gd" id="1_f284f"]
[ext_resource type="PackedScene" uid="uid://d3xyibv2r68ev" path="res://scenes/components/soul_component.tscn" id="3_7qqhi"]
[ext_resource type="PackedScene" uid="uid://brwji28kmyilf" path="res://scenes/components/stats/health_component.tscn" id="3_73i4a"]
[ext_resource type="PackedScene" uid="uid://4eygpv6ar4kx" path="res://scenes/components/effect_flash_component.tscn" id="3_c5p53"]
[ext_resource type="PackedScene" uid="uid://b3v2047p3daky" path="res://scenes/components/souls_drop_component.tscn" id="3_cpi08"]
[ext_resource type="PackedScene" uid="uid://bp1sun7nnmiix" path="res://scenes/components/stats/mana_component.tscn" id="4_y8djd"]
[ext_resource type="PackedScene" uid="uid://cro6y6g0v3niq" path="res://scenes/ui/bars/hp_bar.tscn" id="5_ke8gu"]
[ext_resource type="PackedScene" uid="uid://c5b0526vcqecl" path="res://scenes/components/stats/stamina_component.tscn" id="5_y26qn"]
[ext_resource type="PackedScene" uid="uid://dru8xg5iulexd" path="res://scenes/ui/bars/stamina_bar.tscn" id="6_eviuc"]
[ext_resource type="PackedScene" uid="uid://bl3os4c1rpj0j" path="res://scenes/ui/bars/mana_bar.tscn" id="7_5sd50"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2mbyc"]
resource_local_to_scene = true
height = 0.2
radius = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_e3e2x"]
resource_local_to_scene = true
height = 4.0
radius = 4.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_aa2io"]
resource_local_to_scene = true
radius = 0.4
height = 0.8

[node name="BasicEnemy" type="CharacterBody3D"]
collision_layer = 1024
collision_mask = 1537
wall_min_slide_angle = 0.0
floor_snap_length = 0.2
platform_floor_layers = 4278190081
script = ExtResource("1_f284f")
speed = 150.0

[node name="SoulsDropComponent" parent="." instance=ExtResource("3_cpi08")]

[node name="SoulComponent" parent="." instance=ExtResource("3_7qqhi")]
souls = Vector3(20, 20, 20)

[node name="Node3D" type="Node3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="Node3D"]
path_height_offset = 0.5
path_max_distance = 30.01

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.397904, 0)
target_position = Vector3(0, 0, 1)

[node name="CallEnemyAreaClient" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape3D" type="CollisionShape3D" parent="CallEnemyAreaClient"]
shape = SubResource("CylinderShape3D_2mbyc")

[node name="AgrArea" type="Area3D" parent="."]
collision_layer = 1024
collision_mask = 512
priority = 2

[node name="AgrCollision" type="CollisionShape3D" parent="AgrArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5767, 1.76529)
shape = SubResource("CylinderShape3D_e3e2x")

[node name="EnemyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.39895, 0)
shape = SubResource("CapsuleShape3D_aa2io")

[node name="Timers" type="Node" parent="."]

[node name="ChasePlayerTimer" type="Timer" parent="Timers"]
wait_time = 4.0
one_shot = true

[node name="PushTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="StartTimer" type="Timer" parent="Timers"]
one_shot = true
autostart = true

[node name="SpeedUpTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="SlowDownTimer" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="Body" type="Node3D" parent="."]

[node name="BarsBox" type="Node3D" parent="Body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)

[node name="HPBar" parent="Body/BarsBox" instance=ExtResource("5_ke8gu")]
transform = Transform3D(1, 0, 0, 0, 0.525546, -0.850765, 0, 0.850765, 0.525546, 0, 0.15, 0)
bar_color = Color(0, 0.603922, 0, 1)

[node name="StaminaBar" parent="Body/BarsBox" instance=ExtResource("6_eviuc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
bar_color = Color(0.823529, 0.662745, 0, 1)

[node name="ManaBar" parent="Body/BarsBox" instance=ExtResource("7_5sd50")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)

[node name="StatsBox" type="Node3D" parent="Body"]

[node name="HealthComponent" parent="Body/StatsBox" node_paths=PackedStringArray("owner_node") instance=ExtResource("3_73i4a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.886331, 0)
owner_node = NodePath("../../..")
max_value = 5.0
current_value = 5.0
regen = 0.2

[node name="ManaComponent" parent="Body/StatsBox" node_paths=PackedStringArray("owner_node") instance=ExtResource("4_y8djd")]
owner_node = NodePath("../../..")

[node name="StaminaComponent" parent="Body/StatsBox" node_paths=PackedStringArray("owner_node") instance=ExtResource("5_y26qn")]
owner_node = NodePath("../../..")
max_value = 5.0
current_value = 5.0
regen = 0.5

[node name="SkillBox" type="Node3D" parent="Body"]

[node name="EffectFlashComponent" parent="Body" node_paths=PackedStringArray("health_component") instance=ExtResource("3_c5p53")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.807818, 0)
health_component = NodePath("../StatsBox/HealthComponent")

[connection signal="area_exited" from="CallEnemyAreaClient" to="." method="_on_call_enemy_area_client_area_exited"]
[connection signal="timeout" from="Timers/ChasePlayerTimer" to="." method="_on_chase_player_timer_timeout"]
[connection signal="timeout" from="Timers/PushTimer" to="." method="_on_push_timer_timeout"]
[connection signal="timeout" from="Timers/SpeedUpTimer" to="." method="_on_speed_up_timer_timeout"]
[connection signal="timeout" from="Timers/SlowDownTimer" to="." method="_on_slow_down_timer_timeout"]
